<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.fragment.AddCar"
    android:background="@color/grey">


    <Button
        android:id="@+id/GoBackButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:contentDescription="go back"
        app:layout_constraintEnd_toEndOf="@+id/title_box"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/title_box"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/red"
        android:text="@string/go_back"
        android:layout_marginTop="17dp"/>

    <TextView
        android:id="@+id/title_box"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/car_name"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/car_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_box" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:hint="@string/car_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/car_name" />

    <TextView
        android:id="@+id/car_brand"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:text="@string/car_brandname"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />



    <ListView
        android:id="@+id/car_brand_list"
        android:layout_width="310dp"
        android:layout_height="336dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/car_brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>